# Orchestration_Automation

./: .gitignore  LICENSE  README.md  REPRODUCE.md
api/: Dockerfile  docker-compose.yml  pyproject.toml
api/app/: README.md  dependencies.py  main.py  pytest.ini  requirements.txt  schemas.py
api/app/routes/: item_routes.py
api/app/tests/: conftest.py  test_dependencies.py  test_main.py
api/k8s/: deployment.yaml  service.yaml
scripts/: headnode.sh  headnode_setup.yml  setup.sh  workernode.sh  workernode_setup.yml
src/: hosts.ini  setup.yml
